package enumeration;

/**
 * Tipos de cliente posibles.
 */
public enum TipoCliente {
    ConsumidorFinal,
    ResponsableInscripto,
    Exento
}