package enumeration;

/**
 * Tipos de impuestos aplicables a facturas.
 */
public enum TipoImpuesto {
    IVA,
    IIBBCABA,
    IIBBBsAs,
    OtrosImpuestos
}