@startuml
' Modelos principales
class Cliente {
  - cuit: String
  - razonSocial: String
  - tipoCliente: TipoCliente
  - listaPrecio: ListaPrecio
  - facturas: List<Factura>
}
class ListaPrecio {
  - listaPreciosID: int
  - descripcion: String
  - clientes: List<Cliente>
}
class Factura {
  - cliente: Cliente
  - sucursalID: int
  - numero: int
  - fchEmision: LocalDate
  - total: double
  - productos: List<FacturaProducto>
  - impuestos: List<FacturaImpuesto>
  - pagos: List<PagoFactura>
}
class FacturaProducto {
  - producto: Producto
  - cantidad: int
  - precio: double
}
class FacturaImpuesto {
  - tipoImpuesto: TipoImpuesto
  - porcentaje: double
  - importe: double
}
class PagoFactura {
  - factura: Factura
  - totalPagado: double
}
class Producto {
  - productoID: int
  - descripcion: String
  - precio: double
}
class Remito {
  - remitoID: int
  - fecha: LocalDate
  - cliente: Cliente
  - productos: List<RemitoProducto>
}
class RemitoProducto {
  - producto: Producto
  - cantidad: int
  - precio: double
}
class Pago {
  - fecha: LocalDate
  - importe: double
  - banco: String
  - cuenta: String
  - facturasAsociadas: List<PagoFactura>
}
class Recibo {
  - cuitCliente: String
  - razonSocialCliente: String
}

' Controladores (Singleton)
class ClienteController{
  - listadoClientes: List<Cliente>
  + getClienteConFacturasAdeudadas(cantidad: int): ArrayList<ClienteDTO>
  + getClientesPorListaPrecio(int lpID)
  + addCliente(c: Cliente)
  + getClientes(): ArrayList<ClienteDTO>
  + tieneFacturasImpagas(cantidad: int): boolean
  }

class VentasController {
  + agregarProducto(p: Producto, cantidad: int, precio: double)
  + agregarImpuesto(imp: FacturaImpuesto)
  + getTotalPagado(): double
  + agregarFactura(f: Factura)
  }

class PagosController{
  + agregarPago(pago: PagoFactura)
  }

' Enumeraciones
enum TipoCliente {
  ConsumidorFinal
  ResponsableInscripto
  Exento
}
enum TipoImpuesto {
  IVA
  IIBBCABA
  IIBBBsAs
  OtrosImpuestos
}

' Relaciones de composición y asociación
ListaPrecio "1" o-- "*" Cliente
Cliente "1" --o "*" Factura
Cliente "1" --o "*" Recibo
Factura "1" *--- "*" FacturaProducto
Factura "1" *--- "*" FacturaImpuesto
Factura "1" *--- "*" PagoFactura
Remito "1" o-- "*" RemitoProducto
Pago "1" --* "*" PagoFactura
Factura "0..*" --* "1" VentasController
Producto "0..*" --* "1" VentasController
Producto "0..*" --o "1" RemitoProducto
Cliente "1" --o "0..*" Remito

ClienteController "1" *-- "0..*" Cliente
PagosController "1" *-- "0..*" Pago
ClienteController "1" --- "1" PagosController
ClienteController "1" --- "1" VentasController
PagosController "1" ---- "1" VentasController

@enduml